--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 ### Variables
 #
 set $mod Mod4
-set $term foot --override=colors.background=000000 --font="DejaVu Sans Mono:size=11"
+set $term foot --override=colors.background=000000 --override=colors.foreground=ffffff --font="DejaVu Sans Mono:size=11"
 set $menu dmenu_path | wmenu -f "DejaVu Sans Mono 13" -N 000000 -S 00AAAA | xargs swaymsg exec --
 
 default_border pixel 3
