--- a/config
+++ b/config
@@ -1,3 +1,8 @@
+# INSTALLATION: write this file to the following location:
+#
+# ~/.sway/config
+#
+
 # Read `man 5 sway` for a complete reference.
 ### Variables
 #
