--- a/config
+++ b/config
@@ -8,7 +8,7 @@
 #
 set $mod Mod4
 set $term foot --override=colors.background=000000 --override=colors.foreground=ffffff --font="DejaVu Sans Mono:size=11"
-set $menu dmenu_path | wmenu -f "DejaVu Sans Mono 13" -N 000000 -S 00AAAA | xargs swaymsg exec --
+set $menu wmenu-run -f "DejaVu Sans Mono 13" -N 000000 -S 00AAAA | xargs swaymsg exec --
 
 default_border pixel 3
 focus_follows_mouse no
