--- a/config
+++ b/config
@@ -55,7 +55,7 @@ input type:touchpad middle_emulation enabled
     bindsym $mod+h exec $term
 
     # Start emacs
-    bindsym $mod+Shift+h exec emacsclient -c
+    bindsym $mod+Shift+h exec emacsclient -c --alternate-editor=""
 
     # Kill focused window
     bindsym $mod+Shift+c kill
